Vector Micro Tests Draft Move
Signed-off-by: Marcus G K Williams <marcus.williams@intel.com>