@@ -24,46 +24,34 @@
 # questions.
 #
 
-VECTORTESTS_HOME="$(pwd)"
-JDK_SRC_HOME="./../../../../../"
-JAVA="${JAVA_HOME}/bin/java"
-JAVAC="${JAVA_HOME}/bin/javac"
-BUILDLOG_FILE="./build.log"
-SPP_CLASSNAME="build.tools.spp.Spp"
-# Windows: Classpath Separator is ';'
-# Linux: ':'
-SEPARATOR=":"
-TYPEPREFIX=""
-TEMPLATE_FILE="unit_tests.template"
-TESTNG_JAR="${TESTNG_PLUGIN}/plugins/org.testng.source_6.13.1.r201712040515.jar"
-TESTNG_RUN_JAR="${TESTNG_PLUGIN}/plugins/org.testng_6.13.1.r201712040515.jar"
-JCOMMANDER_JAR="${TESTNG_PLUGIN}/plugins/com.beust.jcommander_1.72.0.jar"
-TEST_ITER_COUNT=100
+. config.sh
 
-function Log () {
-  if [ $1 == true ]; then
-    echo "$2"
-  fi
-  echo "$2" >> $BUILDLOG_FILE
-}
+Log false "Building Vector API tests, $(date)\n"
 
-function LogRun () {
-  if [ $1 == true ]; then
-    echo -ne "$2"
-  fi
-  echo -ne "$2" >> $BUILDLOG_FILE
-}
+# For each type
+for type in byte short int long float double
+do
+  Type="$(tr '[:lower:]' '[:upper:]' <<< ${type:0:1})${type:1}"
 
-# Determine which delimiter to use based on the OS.
-# Windows uses ";", while Unix-based OSes use ":"
-uname_s=$(uname -s)
-VECTORTESTS_HOME_CP=$VECTORTESTS_HOME
-if [ "x${VAR_OS_ENV}" == "xwindows.cygwin" ]; then
-  VECTORTESTS_HOME_CP=$(cygpath -pw $VECTORTESTS_HOME)
-fi
+  # For each size
+  for bits in 64 128 256 512
+  do
+    vectorteststype=${typeprefix}${Type}${bits}VectorTests
+    # Compile
+    Log true "Compiling ${vectorteststype}... "
+    Log false "\n${JAVAC} -cp \"${VECTORTESTS_HOME_CP}$SEPARATOR${TESTNG_JAR}\" --add-modules=jdk.incubator.vector $vectorteststype.java 2>&1"
+    compilation=$(${JAVAC} -cp "${VECTORTESTS_HOME_CP}$SEPARATOR${TESTNG_JAR}" \
+                    --add-modules=jdk.incubator.vector $vectorteststype.java 2>&1)
+    if [[ $compilation  == *"error"* ]]; then
+      Log true "$compilation\n"
+      exit -1
+    else
+      Log false "$compilation\n"
+    fi
+    Log true "done\n"
+  done
+done
 
-if [ "$uname_s" == "Linux" ] || [ "$uname_s" == "Darwin" ]; then
-  SEPARATOR=":"
-else
-  SEPARATOR=";"
-fi
+rm -fr build
+
+
